--- a/app/src/main/res/layout/activity_homework.xml
+++ b/app/src/main/res/layout/activity_homework.xml
@@ -78,45 +78,12 @@
                     android:text="添加"/>
             </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/homework_del"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@id/hw_rl1"
-                android:layout_marginTop="20dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
-                <CheckBox
-                    android:id="@+id/homework_cb_del"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="全选" />
-                <TextView
-                    android:id="@+id/homework_tv_del"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:text="删除"
-                    android:textColor="#FE6459" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="10dp"
-                android:layout_below="@id/homework_del"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
-                android:background="#D7D7D7"/>
-
             <com.example.learningmachineparentsapp.View.SlideRecyclerView
                 android:id="@+id/homework_rv_hwlist"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/homework_del"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/hw_rl1"
                 android:layout_marginBottom="50dp"/>
         </RelativeLayout>
     </ScrollView>
