--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -19,151 +19,86 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/control_tit"/>
 
-    <LinearLayout
-        android:id="@+id/control_ll1"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/control_net"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:layout_height="130dp"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
         android:layout_below="@id/control_pc">
-        <ImageView
-            android:id="@+id/control_iv_clock"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:textSize="18sp"
-            android:textColor="#404040"
-            android:text="设置设备可用时间"/>
-    </LinearLayout>
+            android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/control_ll1"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:layout_below="@id/control_pc">
+                <ImageView
+                    android:id="@+id/control_iv_clock"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16sp"
+                    android:textColor="#404040"
+                    android:text="绿色上网时间"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/control_ll2"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/control_ll1">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="一"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="二"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="三"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="四"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="五"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="六"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="日"/>
-    </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:id="@+id/control_ll3"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/control_ll2">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="开始使用时间"/>
-        <TextView
-            android:id="@+id/control_tv_start"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="00:00"/>
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/control_ll4"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/control_module"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:layout_height="130dp"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/control_ll3">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="结束使用时间"/>
-        <TextView
-            android:id="@+id/control_tv_end"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textColor="#404040"
-            android:text="00:00"/>
-    </LinearLayout>
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
+        android:layout_below="@id/control_net">
+        <LinearLayout
+            android:id="@+id/control_ll2"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_below="@id/control_pc">
+            <ImageView
+                android:id="@+id/control_iv_mod"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:textSize="16sp"
+                android:textColor="#404040"
+                android:text="电话拨打时间"/>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/control_btn_adapt"
